syntax = "proto3";

message SetRoomUserRightsData {
    string id = 1;
    bool has_rights = 2;
}
